// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Slider snapshots should create the right snapshot for decimals and steps specified 1`] = `
<Slider
  max={10}
  min={1}
  minDistance={10}
  mouseThreshold={50}
  multiple={true}
  name={
    Array [
      "c",
      "d",
    ]
  }
  prefix=""
  step={0.5}
  suffix=""
  template=""
  values={
    Array [
      2,
    ]
  }
>
  <span>
    <span
      style={
        Object {
          "left": "0%",
          "width": "100%",
        }
      }
    />
    <span>
      <span />
      <span
        key="minval"
      >
        2.00
      </span>
      <span
        key="maxval"
      />
    </span>
    <span>
      <span
        data-name="min"
        key="min"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "0%",
          }
        }
        tabIndex={1}
      />
      <input
        key="hidden-min"
        name="c"
        type="hidden"
        value={
          Object {
            "input": "c",
            "range": 1,
            "value": 2,
          }
        }
      />
      <span
        data-name="max"
        key="max"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "100%",
          }
        }
        tabIndex={1}
      />
      <input
        key="hidden-max"
        name="d"
        type="hidden"
        value={
          Object {
            "input": "d",
            "range": 10,
            "value": NaN,
          }
        }
      />
    </span>
  </span>
</Slider>
`;

exports[`(Component) Slider snapshots should create the right snapshot for decimals and steps specified 2`] = `
<Slider
  max={10}
  min={1}
  minDistance={10}
  mouseThreshold={50}
  multiple={true}
  name={
    Array [
      "pe",
      "ps",
    ]
  }
  prefix=""
  step={0.5}
  suffix=""
  template=""
  values={
    Array [
      2,
    ]
  }
>
  <span>
    <span
      style={
        Object {
          "left": "0%",
          "width": "100%",
        }
      }
    />
    <span>
      <span />
      <span
        key="minval"
      >
        2.00
      </span>
      <span
        key="maxval"
      />
    </span>
    <span>
      <span
        data-name="min"
        key="min"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "0%",
          }
        }
        tabIndex={1}
      />
      <input
        key="hidden-min"
        name="pe"
        type="hidden"
        value={
          Object {
            "input": "pe",
            "range": 1,
            "value": 2,
          }
        }
      />
      <span
        data-name="max"
        key="max"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "100%",
          }
        }
        tabIndex={1}
      />
      <input
        key="hidden-max"
        name="ps"
        type="hidden"
        value={
          Object {
            "input": "ps",
            "range": 10,
            "value": NaN,
          }
        }
      />
    </span>
  </span>
</Slider>
`;

exports[`(Component) Slider snapshots should create the right snapshot for multiple thumbs 1`] = `
<Slider
  max={1500}
  min={500}
  minDistance={10}
  mouseThreshold={50}
  multiple={true}
  name={
    Array [
      "a",
      "b",
    ]
  }
  prefix=""
  step={250}
  suffix=""
  template=""
  values={
    Array [
      700,
    ]
  }
>
  <span>
    <span
      style={
        Object {
          "left": "0%",
          "width": "100%",
        }
      }
    />
    <span>
      <span />
      <span
        key="minval"
      >
        700
      </span>
      <span
        key="maxval"
      />
    </span>
    <span>
      <span
        data-name="min"
        key="min"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "0%",
          }
        }
        tabIndex={1}
      />
      <input
        key="hidden-min"
        name="a"
        type="hidden"
        value={
          Object {
            "input": "a",
            "range": 500,
            "value": 700,
          }
        }
      />
      <span
        data-name="max"
        key="max"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "100%",
          }
        }
        tabIndex={1}
      />
      <input
        key="hidden-max"
        name="b"
        type="hidden"
        value={
          Object {
            "input": "b",
            "range": 1500,
            "value": NaN,
          }
        }
      />
    </span>
  </span>
</Slider>
`;

exports[`(Component) Slider snapshots should create the right snapshot for single thumb 1`] = `
<Slider
  max={1500}
  min={500}
  minDistance={10}
  mouseThreshold={50}
  prefix=""
  step={250}
  suffix=""
  template=""
  values={
    Array [
      700,
    ]
  }
>
  <span>
    <span
      style={
        Object {
          "left": 0,
          "marginLeft": 0,
          "width": "0%",
        }
      }
    />
    <span>
      <span />
      <span
        key="minval"
      >
        700
      </span>
    </span>
    <span>
      <span
        data-name="min"
        key="min"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "0%",
          }
        }
        tabIndex={1}
      />
      <input
        key="hidden-min"
        type="hidden"
        value={
          Object {
            "input": undefined,
            "range": 500,
            "value": 700,
          }
        }
      />
    </span>
  </span>
</Slider>
`;
